Fixed text spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -35,11 +35,12 @@ header {
 
 .title, .email {
   width: 70%;
+  display: block;
+  margin:auto;
 }
 
 .glasses {
-  width: 31%;
-  margin: 0;
+  width: 30%;
 }
 
 h1 {
@@ -74,29 +75,34 @@ footer {
     width: 60%;
   }
 
-  .glasses {
-    width: 25%;
-    margin: 0 5em;
+  p {
+    width: 70%;
+    margin: 1em auto;
   }
 
-  .social {
-    width: 15%;
+  .glasses {
+    width: 25%;
   }
 
   h1 {
     font-size: 2em;
   }
 
-  .text {
-    padding: 0 5em;
+  .social {
+    width: 15%;
   }
+
 }
 
-@media only screen and (min-width: 60em) {
+@media only screen and (min-width: 38em) {
 
   .social {
     width: 10%;
   }
+
+}
+
+@media only screen and (min-width: 60em) {
 
   .title, .email {
     width: 50%;
@@ -107,8 +113,13 @@ footer {
     margin: 0 20em;
   }
 
-  .text {
-    padding: 0 8em;
+  p {
+    width: 60%;
+    margin: 1em auto;
+  }
+
+  .social {
+    width: 8%;
   }
 
 }
